# lumina

./: .gitignore  README.md  process.py  pyproject.toml
benchmarks/: backend_comparison.py  blur_benchmark.py  edge_benchmark.py
src/lumina/backends/: __init__.py  base.py  numpy_backend.py  python.py
src/lumina/cli/: main.py
src/lumina/core/: image.py
src/lumina/filters/: basic.py  convolution.py  edges.py  enchant.py
src/lumina/io/: loader.py  saver.py
src/lumina/ops/: pooling.py  transform.py
src/lumina/pipeline/: engine.py
tests/: conftest.py  test_backends.py  test_pipeline.py  test_pipeline_engine.py
tests/core/: test_image.py
tests/filters/: test_basic.py  test_convolution.py  test_edges.py
tests/io/: test_loader_saver.py
tests/ops/: test_pooling.py  test_transform.py
